[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_spicy_networking = { git = "https://github.com/CabbitStudios/bevy_spicy_networking", branch="master"}
bevy = { version = "0.5", features = ["dynamic"] }
#bevy_spicy_networking = "0.6"
typetag = "0.1.7"
serde = {version = "1", features = ["derive"]}

[lib]
name = "client"
path = "src/main.rs"